fix: 冻藏管基本信息测试